2001-06-29  James Cownie <jcownie@etnus.com>

	* readelf.c: Support DWARF 2.1 attributes.

2001-06-27  Nick Clifton  <nickc@cambridge.redhat.com>

	* objcopy.c (strip_main): Accept -o command line switch.

2001-06-11  Alan Modra  <amodra@bigpond.net.au>

	Merge from mainline.
	2001-02-27  Alan Modra  <alan@linuxcare.com.au>
	* configure.in (BFD_VERSION): New.
	(AM_INIT_AUTOMAKE): Use $BFD_VERSION.
	* configure: Regenerate.

	2001-04-27  Michal Svec <rebel@atrey.karlin.mff.cuni.cz>
	* strings.c (isgraphic): Do not use isascii() unless it is needed
	for isprint() to work.
	(main): Set the locale domain to LC_ALL not just LC_MESSAGES.

	2001-04-10  Alan Modra  <amodra@one.net.au>
	* nm.c (print_symbol_info_bsd): Use a simple printf string.

	2001-02-07  Todd Vierling  <tv@wasabisystems.com>
	* bucomm.c (bfd_target_vector): Change extern array to pointer.
	* objdump.c (bfd_target_vector): Likewise.

2001-06-10  Philip Blundell  <philb@gnu.org>

	* configure.in: Set version to 2.11.1.
	* configure: Regenerate.

2001-06-09  Alan Modra  <amodra@bigpond.net.au>

	* NEWS: Mention hppa64-elf.  Add binutils-2.11 marker.

	* MAINTAINERS: Replace with mainline version.

2001-06-07  Alan Modra  <amodra@bigpond.net.au>

	* Most files: Update copyright notices.

2001-05-30  Honda Hiroki  <hhonda@kobe-catv.ne.jp>

	* objcopy.c: Add new switches: --keep-global-symbol,
	--keep-symbols, --localize-symbols, --keep-global-symbols and
	--weaken-symbols.
	* binutils.texi: Document new switches.
	* objcopy.1: Regenerate.
	* NEWS: Announce new feature.

2001-05-28  Philip Blundell  <philb@gnu.org>

	From 2001-05-28  Andreas Jaeger  <aj@suse.de>
	* readelf.c (display_debug_frames): Fix warnings: Remove unused
	variables, fix format strings.

	From 2001-05-16  Richard Henderson  <rth@redhat.com>
	* readelf.c (do_debug_frames_interp): New.
	(byte_get_little_endian): If BFD64, always read entire 8-byte fields.
	(byte_get_big_endian): Likewise.
	(parse_args) ['F']: Set do_debug_frames_interp.