@@ -1,3 +1,7 @@
+2001-07-31  David O'Brien  <obrien@FreeBSD.org>
+
+	* readelf.1: New file.
+
 2001-06-29  James Cownie <jcownie@etnus.com>
 
 	* readelf.c: Support DWARF 2.1 attributes.
